--- a/FitnessClub/Areas/CustomerPanel/Pages/Calendar.cshtml
+++ b/FitnessClub/Areas/CustomerPanel/Pages/Calendar.cshtml
@@ -15,6 +15,8 @@
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-9">
-        <h1>This page will have a calendar with all sessions.</h1>
+        <app-root></app-root>
     </div>
 </div>
+
+<script asp-src-include="~/angular/dist/calendar-app/**/*.js"></script>
